service.yml
kind: Service
apiVersion: v1
metadata: 
 name: "traefik-svc"
 namespace: qc
spec: 
 ports: 
  - 
   name: http
   protocol: TCP
   port: 80
   targetPort: 80
   nodePort: 31462
  - 
   name: https
   protocol: TCP
   port: 443
   targetPort: 443
   nodePort: 30851
 selector: 
  "k8s-app": "traefik-ingress-lb-svc"
 type: NodePort
 sessionAffinity: None
 externalTrafficPolicy: Cluster
status: 
 loadBalancer:
