ingress.yml
kind: Ingress
apiVersion: "extensions/v1beta1"
metadata: 
 name: "services-ingress"
 namespace: qc
 labels: 
  name: svc
 annotations:
  "kubernetes.io/ingress.class": traefik
spec: 
 rules: 
  - http: 
    paths: 
    - path: "/ship-service"
      backend: 
       serviceName: dxpshipservice
       servicePort: 80
    - path: "/activity-reservation-service"
      backend: 
       serviceName: dxpactivityreservationservice
       servicePort: 80
status: 
 loadBalancer:
